--- a/style.css
+++ b/style.css
@@ -16,3 +16,17 @@
     width:92%;
    // background:red;
 }
+.mobilImg{
+    position:relative;
+}
+.videoPh{
+    position:absolute;
+    width:52%;
+    height:88vh ;
+    left:34%;
+    top:4%;
+    background:black;
+    border-radius: 5px;
+    //z-index: 2;
+    //background-image: url("https://www.instagram.com/images/instagram/xig/homepage/screenshots/screenshot1-2x.png");
+}
